# ddslog

./: CMakeLists.txt  FileConsumer.cpp  Log.cpp  OStreamConsumer.cpp  StdoutConsumer.cpp
example/: benchmark.cpp  example.cpp  example.hpp  main.c  main.cpp
include/: ddslog.h
include/fastdds/: FileConsumer.hpp  Log.hpp  OStreamConsumer.hpp  StdoutConsumer.hpp  StdoutErrConsumer.hpp
src/: FileConsumer.cpp  Log.cpp  StdoutErrConsumer.cpp  ddslog.cpp
